overflow bug fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,9 @@
 body {
   font-weight: normal;
   font-family: "Lexend Deca";
+}
+
+.parent{
   overflow-x: hidden;
 }
 
